--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "chuhlomin/rtm-stat",
+  "name": "chuhlomin/rtm-statistic",
   "description": "",
   "minimum-stability": "dev",
   "license": "MIT License",
