--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,13 @@
   "require": {
     "bartosz-maciaszek/php-rtm": "1.0.4",
     "symfony/console": "2.8.x-dev",
-    "symfony/yaml": "2.8.x-dev"
+    "symfony/yaml": "2.8.x-dev",
+    "pimple/pimple": "3.0",
+    "symfony/filesystem": "^3.0@dev"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.8.*",
+    "mockery/mockery": "^1.0@dev"
   },
   "autoload": {
     "psr-4": {
